# lecturer

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  lecturer.py  pyproject.toml
extraction/: __init__.py  base.py  endnotes.py  epub.py  pdf.py
recitation/: __init__.py  kokoro.py  lexicon.py
redaction/: __init__.py  base.py  cantillation.py  gloss.py  interpret.py  mend.py  providers.py  tongues.py  weave.py
redaction/elocution/: __init__.py  base.py  biblical.py  classical.py  josephus.py  philo.py  stephanus.py
