[project]
name = "lecturer"
version = "0.1.0"
description = "Turn monographs into audiobooks that sound like the author lecturing from their own book"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "beautifulsoup4>=4.15.0",
    "cement>=3.0.14",
    "openai>=2.45.0",
    "pymupdf>=1.28.0",
]

[project.scripts]
lecturer = "lecturer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["lecturer.py", "extraction"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "PTH", # prefer pathlib
    "RUF", # ruff-specific
]
ignore = [
    "RUF012", # mutable class attributes: cement's Meta idiom trips this constantly
]
